Solve group anagram

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .vscode
 
+leetcode/*.o
+leetcode/*.exe
+leetcode/*.app
+leetcode/test.app
+
 lightoj/*.o
 lightoj/*.exe
 lightoj/*.app
@@ -7,3 +12,10 @@ lightoj/test.app
 
 core/pointer/*.o
 core/pointer/*.exe
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
